--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,27 @@
-div {
-    font-size: 48px;
-    color: blueviolet;
+:root {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
+
+.container {
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    width: 100%;
+    height: 100%;
+}
+
+.nav {
+    background-color: blue;
+}
+
+.dashboard {
+    background-color: blueviolet;
 }
