--- a/css/styles.css
+++ b/css/styles.css
@@ -14,12 +14,19 @@ body {
 .container {
     display: grid;
     grid-template-columns: 1fr 4fr;
+    grid-template-rows: 1fr 5fr;
     width: 100%;
     height: 100%;
 }
 
 .nav {
     background-color: blue;
+    grid-row: 1 / 3;
+}
+
+.header {
+    background-color: aqua;
+
 }
 
 .dashboard {
