--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 :root {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Roboto", sans-serif;
     margin: 0;
     padding: 0;
     height: 100%;
@@ -22,6 +24,26 @@ body {
 .nav {
     background-color: blue;
     grid-row: 1 / 3;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 50px;
+    align-content: start;
+    row-gap: 24px;
+    padding-top: 16px;
+    color: white;
+}
+
+.nav .nav-section {
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+}
+
+.nav .nav-section div:nth-child(odd) {
+    justify-self: center;
+}
+
+.nav div {
+    height: min-content;
 }
 
 .header {
