Create structure for first row of header
The header section needs to be built with grid structures. The two
rows of the header do not line up, so the whole header cannot be
represented by one grid. Instead, each row is its own grid. The
first row grid has two columns and the left column is itself a
flex container. Being a flex container makes it easier for the search
bar to grow and shrink as needed to fill up space. However, the
second column is itself a grid container.

--- a/css/styles.css
+++ b/css/styles.css
@@ -33,12 +33,12 @@ body {
     color: white;
 }
 
-.nav .nav-section {
+.nav>.nav-section {
     display: grid;
     grid-template-columns: 1fr 4fr;
 }
 
-.nav .nav-section div:nth-child(odd) {
+.nav>.nav-section>div:nth-child(odd) {
     justify-self: center;
 }
 
@@ -48,7 +48,47 @@ body {
 
 .header {
     background-color: aqua;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 2fr 3fr;
+}
 
+.header>.first-row {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    gap: 64px;
+}
+
+.header>.first-row>.search {
+    background-color: brown;
+    display: flex;
+    padding: 24px 36px;
+    align-items: center;
+    gap: 8px;
+}
+
+.header>.first-row>.search>div {
+    width: 25px;
+    height: 25px;
+    background-color: bisque;
+}
+
+.header>.first-row>.account {
+    background-color: black;
+    display: grid;
+    grid-template-columns: 1fr 1fr max-content;
+    color: white;
+    padding: 24px 36px;
+    gap: 8px;
+}
+
+.header>.first-row>.account>div {
+    background-color: gray;
+}
+
+.header input {
+    height: 25px;
+    flex: 1;
 }
 
 .dashboard {
