--- a/css/styles.css
+++ b/css/styles.css
@@ -91,6 +91,47 @@ body {
     flex: 1;
 }
 
+.header>.second-row {
+    display: grid;
+    grid-template-columns: 16fr 9fr;
+    gap: 8px;
+}
+
+.header>.second-row>.account {
+    display: grid;
+    grid-template-columns: min-content 1fr;
+    padding: 16px 36px;
+    align-items: center;
+    column-gap: 16px;
+    row-gap: 8px;
+}
+
+.header>.second-row>.account>div:first-child {
+    width: 75px;
+    height: 75px;
+    background-color: green;
+    grid-row: 1 / 3;
+}
+
+.header>.second-row>.account>div:nth-child(2) {
+    align-self: end;
+}
+
+.header>.second-row>.account>div:last-child {
+    align-self: start;
+}
+ 
+.header>.second-row>.buttons {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center;
+}
+
+.header button {
+    width: 80px;
+    height: 35px;
+}
+
 .dashboard {
     background-color: blueviolet;
 }
