--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ body {
 .container {
     display: grid;
     grid-template-columns: 1fr 4fr;
-    grid-template-rows: 1fr 5fr;
+    grid-template-rows: min-content 1fr;
     width: 100%;
     height: 100%;
 }
@@ -50,7 +50,7 @@ body {
     background-color: aqua;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 2fr 3fr;
+    justify-content: stretch;
 }
 
 .header>.first-row {
@@ -95,20 +95,21 @@ body {
     display: grid;
     grid-template-columns: 16fr 9fr;
     gap: 8px;
+    height: min-content;
 }
 
 .header>.second-row>.account {
     display: grid;
     grid-template-columns: min-content 1fr;
-    padding: 16px 36px;
+    padding: 8px 36px;
     align-items: center;
     column-gap: 16px;
     row-gap: 8px;
 }
 
 .header>.second-row>.account>div:first-child {
-    width: 75px;
-    height: 75px;
+    width: 60px;
+    height: 60px;
     background-color: green;
     grid-row: 1 / 3;
 }
@@ -134,4 +135,94 @@ body {
 
 .dashboard {
     background-color: blueviolet;
+    display: grid;
+    grid-template-columns: 8fr 3fr;
+    grid-template-rows: 1fr;
+    padding: 24px 36px;
+    column-gap: 24px;
+    overflow: auto;
+}
+
+.projects {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: min-content 1fr 1fr 1fr;
+    gap: 24px;
+}
+
+.projects>div:first-child {
+    grid-column: 1 / 3;
+}
+
+.projects>.card {
+    background-color: orange;
+    display: grid;
+    grid-template-rows: min-content 1fr min-content;
+    padding: 16px;
+    gap: 4px;
+}
+
+.card>.icons {
+    display: flex;
+    justify-content: end;
+    gap: 8px;
+}
+
+.card .icon {
+    width: 25px;
+    height: 25px;
+    background-color: black;
+}
+
+.misc {
+    display: grid;
+    grid-template-rows: repeat(4, min-content);
+    gap: 24px;
+}
+
+.block {
+    background-color: white;
+}
+
+.announcements {
+    display: grid;
+    grid-template-rows: min-content min-content min-content;
+    padding: 16px;
+    gap: 16px;
+    justify-content: space-between;
+}
+
+.announcements>div {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+    margin: 0;
+    padding: 0;
+    height: min-content;
+}
+
+.announcements>div>div {
+    margin: 0;
+    padding: 0;
+    height: min-content;
+}
+
+.trending {
+    display: grid;
+    padding: 16px;
+    gap: 16px;
+}
+
+.trending>div {
+    display: grid;
+    grid-template-columns: min-content 1fr;
+    grid-template-rows: 20px 20px;
+    column-gap: 12px;
+    height: min-content;
+}
+
+.trending .pfp {
+    background-color: darkblue;
+    width: 40px;
+    grid-row: 1 / 3;
 }
