Add box shadow to header
The header needed a box shadow on the bottom edge to make it stand
out from the dashboard. The box shadow has been added and the z-index
of each element of the page has been changed so that the box shadow
only appears at the bottom edge of the header and not the left edge.

--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,7 @@ img {
     padding: 16px;
     color: white;
     font-size: 18px;
+    z-index: 3;
 }
 
 .nav>.nav-section {
@@ -84,6 +85,8 @@ img {
     display: grid;
     grid-template-columns: 1fr;
     justify-content: stretch;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    z-index: 2;
 }
 
 .header>.first-row {
@@ -204,6 +207,7 @@ img {
     padding: 24px 36px;
     column-gap: 24px;
     overflow: auto;
+    z-index: 1;
 }
 
 .projects {
