--- a/css/styles.css
+++ b/css/styles.css
@@ -200,9 +200,9 @@ img {
 }
 
 .dashboard {
-    background-color: blueviolet;
+    background-color: var(--background-color);
     display: grid;
-    grid-template-columns: 8fr 3fr;
+    grid-template-columns: 1fr min-content;
     grid-template-rows: 1fr;
     padding: 24px 36px;
     column-gap: 24px;
@@ -219,26 +219,49 @@ img {
 
 .projects>div:first-child {
     grid-column: 1 / 3;
+    font-weight: 600;
+    font-size: 18px;
 }
 
 .projects>.card {
-    background-color: orange;
-    display: grid;
-    grid-template-rows: min-content 1fr min-content;
-    padding: 16px;
+    background-color: white;
+    border-left: 6px solid orange;
+    border-radius: 6px;
+    display: flex;
+    flex-direction: column;
+    padding: 24px;
     gap: 4px;
+    justify-content: start;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.projects>.card>div:first-child {
+    font-weight: 600;
+}
+
+.projects>.card>div:nth-child(2) {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    height: 5lh;
+    font-size: 14px;
+    color: rgb(100, 100, 100);
+}
+
+.projects>.card>div:last-child {
+    align-self: end;
+    margin-top: auto;
 }
 
 .card>.icons {
     display: flex;
     justify-content: end;
-    gap: 8px;
+    gap: 32px;
 }
 
-.card .icon {
+.card img {
     width: 25px;
     height: 25px;
-    background-color: black;
+    filter: brightness(0) saturate(100%);
 }
 
 .misc {
@@ -247,15 +270,21 @@ img {
     gap: 24px;
 }
 
+.misc>div:first-child, .misc>div:nth-child(3) {
+    font-weight: 600;
+    font-size: 18px;
+}
+
 .block {
     background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    border-radius: 6px;
 }
 
 .announcements {
     display: grid;
     grid-template-rows: min-content min-content min-content;
-    padding: 16px;
-    gap: 16px;
+    padding: 8px 24px;
     justify-content: space-between;
 }
 
@@ -266,6 +295,12 @@ img {
     margin: 0;
     padding: 0;
     height: min-content;
+    padding: 16px 8px;
+    border-bottom: 1px solid lightgray;
+}
+
+.announcements>div:last-child {
+    border: none;
 }
 
 .announcements>div>div {
@@ -274,10 +309,24 @@ img {
     height: min-content;
 }
 
+.announcements>div>div:first-child {
+    font-size: 14px;
+    font-weight: 600;
+}
+
+.announcements>div>div:last-child {
+    font-size: 12px;
+    color: rgb(100, 100, 100);
+    height: 3lh;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 .trending {
     display: grid;
-    padding: 16px;
+    padding: 24px;
     gap: 16px;
+    min-width: max-content;
 }
 
 .trending>div {
@@ -286,10 +335,18 @@ img {
     grid-template-rows: 20px 20px;
     column-gap: 12px;
     height: min-content;
+    align-items: center;
+    font-size: 14px;
 }
 
-.trending .pfp {
-    background-color: darkblue;
-    width: 40px;
+.trending img {
+    filter: none;
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
     grid-row: 1 / 3;
+}
+
+.trending>div>div:last-child {
+    color: rgb(100, 100, 100);
 }
